<resources>
    <string name="app_name">Expense Manager</string>
    <string name="welcome_txt">Welcome!</string>
    <string name="FullName_hint">Enter Your Full Name</string>
    <string name="Email_hint">Enter Your E-mail Address</string>
    <string name="Username_hint">Enter User Name</string>
    <string name="Password_hint">Enter Password</string>
    <string name="RegisterButton_hint">Register</string>
    <string name="Login_hint">Login here..</string>
    <string name="LoginButton_hint">Login</string>
    <string name="AlreadyAccount_hint">You have a already account?</string>
    <string name="No_transaction_txt">No Transaction</string>
    <string name="Add_transaction_txt">Please add your transaction</string>
    <string name="Add_income_txt">ADD INCOME</string>
    <string name="Add_expenses_txt">ADD EXPENSES</string>
    <string name="ALL_transaction_txt">ALL TRANSACTION</string>
    <string name="transaction_txt">Transactions</string>
    <string name="Reports_txt">REPORTS</string>
    <string name="addincome_txt">Add Income</string>
    <string name="type_txt">Type</string>
    <string name="Income_txt">Income</string>
    <string name="Expense_txt">Expense</string>
    <string name="Amount_txt">Amount</string>
    <string name="Category_txt">category</string>
    <string name="Payment_txt">payment</string>
    <string name="DateTime_txt">Date &amp; Time</string>
    <string name="Mode_txt">Mode</string>
    <string name="Note_txt">Note</string>
    <string name="Date_txt">06/11/2023</string>
    <string name="Time_txt">08.45 am</string>
    <string name="AddCategory_txt">Add Category</string>
    <string name="AddPayment_txt">Add Payment Mode</string>
    <string name="Add_txt">Add</string>
    <string name="Balance_txt">Balance</string>
    <string name="Money_txt">$0.00</string>
    <string name="Report_txt">Reports</string>
    <string name="ReportByIncome_txt">Report By Income</string>
    <string name="ReportByExpense_txt">Report By Expense</string>
    <string name="ReportByCategory_txt">Report By Category</string>
    <string name="ReportByType_txt">Report By Type</string>
    <string name="ReportByMode_txt">Report By Mode</string>
    <string name="NoData_txt">No chart data available</string>
    <string name="NoReportsFound_txt">No Reports found</string>
    <string name="ExportReportsToCheckOrShare_txt">Export reports to check or share</string>
    <string name="ExportedReports_txt">Exported Reports</string>
    <string name="FilePath_txt">File Path : /storage/emulated/0/Download/ExpenseReports</string>
    <string name="Setting_txt">Settings</string>
    <string name="GeneralSetting_txt">GENERAL SETTINGS</string>
    <string name="SystemAppLock_txt">System App Lock</string>
    <string name="AskSystemLock_txt">Ask system lock while open app</string>
    <string name="Backup_setting">BACKUP SETTINGS</string>
    <string name="TackDriveBackup_setting">Take Drive Backup</string>
    <string name="TackGoogleDriveBackup_setting">Take Google Drive backup of data</string>
    <string name="RestoreDriveBackup_txt">Restore Drive Backups</string>
    <string name="RestoreData_txt">Restore data from drive backups</string>
    <string name="ClearData_txt">CLEAR DATA</string>
    <string name="ClearAllRecords_txt">Clear All Records</string>
    <string name="ClearYourAllIncome_txt">This will clear your all income expense \n entries.</string>
    <string name="Currency_txt">Currency</string>
    <string name="DateFormat_txt">Date Format</string>
    <string name="TimeFormat_txt">Time Format</string>
    <string name="submit_txt">submit</string>
</resources>