<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.ExportedReportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/DarkBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExportedReports_txt"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:src="@drawable/uparrow"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FilePath_txt"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/DarkBlue"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/dollar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:src="@drawable/substract" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:src="@drawable/substract" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:src="@drawable/substract" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:src="@drawable/substract" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/NoReportsFound_txt"
        android:layout_gravity="center"
        android:textColor="@color/DarkBlue"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/ExportReportsToCheckOrShare_txt"
        android:textColor="@color/black" />

</LinearLayout>